--- a/web/css/main.css
+++ b/web/css/main.css
@@ -3,3 +3,15 @@ body {
   color: white;
   font-family: sans-serif;
 }
+
+.action-list {
+}
+
+.action-name {
+}
+
+.action-description {
+}
+
+.action-keybind {
+}
